deploy/kubernetes/base/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voxscore-api
  labels:
    app.kubernetes.io/name: voxscore-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app.kubernetes.io/name: voxscore-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: voxscore-api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        fsGroup: 1001
      containers:
        - name: api
          image: josinon/voxscore-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: '1'
              memory: 512Mi
