deploy/kubernetes/base/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voxscore-frontend
  labels:
    app.kubernetes.io/name: voxscore-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: voxscore-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: voxscore-frontend
    spec:
      containers:
        - name: nginx
          image: josinon/voxscore-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
